# Pixel-Client

./: .env.example  .gitignore  AGENTS.md  App.tsx  README.md  README_EN.md  constants.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  platform.ts  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
.claude/hooks/: skill-forced-eval.sh
.claude/skills/rag-vectordb/: SKILL.md
.claude/skills/tauri-main/: SKILL.md
.claude/skills/tauri-react/: SKILL.md
.github/workflows/: ci.yml  release.yml
__tests__/: constants.test.ts
components/: AppWrapper.tsx  Chat.tsx  CustomTitlebar.tsx  ErrorBoundary.tsx  ExcalidrawWrapper.tsx  Mascot.tsx  MermaidBlock.tsx  ModelManager.tsx  PixelUI.tsx  SettingsDropdown.tsx  Skeleton.tsx  Toast.tsx
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  EXCALIDRAW_INTEGRATION_SOLUTION.md
planning/: findings.md  progress.md  task_plan.md
services/: apiClient.ts  llmService.ts  tauri-api.ts
src/: index.css  tauri-api.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bindings/: ChatSession.ts  LLMProvider.ts  Message.ts  app_config.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  notifications.rs  state.rs
src-tauri/src/commands/: chat.rs  excalidraw.rs  llm.rs  mcp.rs  mod.rs  provider.rs  skills.rs
src-tauri/src/services/: mod.rs  persistence.rs  persistence_cmd_wrapper.rs  renderer.rs  renderer_cmd_wrapper.rs
src-tauri/src/types/: app_config.ts
src/__tests__/: utils.test.ts
src/__tests__/hooks/: useExcalidraw.test.ts
src/components/Chat/: Chat.tsx  ChatInput.tsx  ChatMessageList.tsx
src/components/Excalidraw/: ExcalidrawEditor.tsx  ExcalidrawViewer.tsx
src/components/ModelManager/: ModelForm.tsx  ModelList.tsx  ModelManager.tsx
src/hooks/: useChat.ts  useDeepThinking.ts  useExcalidraw.ts  useSafeInvoke.ts
src/services/: excalidrawService.ts  mcpService.ts  providerService.ts  skillService.ts
src/types/: AceConfig.ts  AppState.ts  ChatSession.ts  LLMModel.ts  McpServer.ts  app_config.ts  excalidraw.types.ts  excalidraw_element.ts  excalidraw_scene.ts  highlight_result.ts  index.ts  message.ts  streaming_chunk.ts
