[package]
name = "pixel-client"
version = "0.1.0"
description = "Pixel-Client Tauri v2 Application"
authors = ["Pixel-Client Team"]
edition = "2021"

[lib]
path = "src/lib.rs"

# [[bin]]
# name = "pixel-client"
# path = "src/main.rs"

[build-dependencies]
ts-rs = "10"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zstd = "0.13"
syntect = "5.0"
pulldown-cmark = "0.10"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

[features]
default = ["custom-protect"]
custom-protect = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
