[package]
name = "pixel-client"
version = "1.0.0"
description = "Pixel-Client Tauri v2 Application"
authors = ["Pixel-Client Team"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pixel-client"
path = "src/main.rs"

[dependencies]
ts-rs = "10"
tauri = { version = "2.9", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zstd = "0.13"
syntect = "5.0"
pulldown-cmark = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
once_cell = "1.19"
html-escape = "0.2"
futures = "0.3"
base64 = "0.22"
regex = "1.10"
rquickjs = { version = "0.6", features = ["futures", "parallel"] }
zip = "2.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
ts-rs = "10"
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protect"]
custom-protect = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
